#2: added a unit test for serialization and fixed several bugs discovered via the test.